# solana-sql-query

./: Cargo.toml  Dockerfile  README.md  solana.redb  spec.yaml  sqlx-data.json
.github/workflows/: rust.yml
configuration/: base.yaml  production.yaml
data/: bome.json
migrations/: 1_create_block.sql  20240528051125_create_address_tx.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/client/: mod.rs
src/cmd/: mod.rs  server.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/router/: address2tx.rs  health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
zerotoproduction/: README.md  foreword.md  perface.md
