[package]
name = "solana-sql-query"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
axum = { version = "0.7.5", features = ["tokio", "macros"] }
base64 = "0.22.1"
bs58 = "0.5.1"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"

solana-client = "1.18.14"
solana-sdk = "1.18.14"
solana-transaction-status = "1.18.14"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.68"
argon2 = "0.4.1"
rand = "0.8.5"
regex = "1.6.0"
time = "0.3.11"
once_cell = "1.13.0"

bincode = "1.3.3"
borsh = "1.5.0"
redb = "2.1.0"
chrono = "0.4.38"
